src/styles.css
* {
  box-sizing: border-box;
}

body {
  height: 100%;
  margin-left: 15%;
  margin-right: 15%;
  font-family: "Verdana", Verdana, Geneva, Tahoma, sans-serif;
}

hr {
  margin-left: 0;
  margin-right: 0;
}

.website-title {
  padding-bottom: 15px;
  padding-top: 30px;
  font-size: 35px;
  text-transform: uppercase;
  color: grey;
}

/* Navbar styling: */

.navbar-ul {
  display: table;
  table-layout: fixed;
  width: 100%;
  padding: 0;
}

.navbar-li {
  background-color: lightgrey;
  vertical-align: middle;
  display: table-cell;
  text-align: center;
}

.navbar-a {
  height: 30px;
  line-height: 30px;
  color: grey;
  display: block;
  font-size: 15px;
  text-decoration: none;
  text-transform: uppercase;
  transition: color 0.3s linear;
  -webkit-transition: color 0.3s linear;
  -moz-transition: color 0.3s linear;
}

.navbar-a:hover {
  color: white;
  background-color: grey;
}

.navbar-li:not(:last-child) {
  border-right: solid 1px darkgrey;
}

/* Slick Carousel styling: */

.slider {
  width: 50%;
}

.slick-slide img {
  width: 975px;
  height: 400px;
}

.slick-list {
  max-height: 400px;
}

.slick-prev:before {
  color: black;
}

.slick-next:before {
  color: black;
}

/* Paragrapghs styling: */
/* ------------------------------------------------------- */
/* !!!Unresponsive part!!! */
/* ------------------------------------------------------- */

.paragraphs {
  margin-top: 20px;
}

.paragraph-element {
  display: inline-block;
  margin-top: 15px;
  width: 300px;
  height: 300px;
}

.paragraph-element:not(:last-child) {
  margin-right: 22px;
}

.paragraph-image {
  height: 60%;
  width: 100%;
}

.paragraph-text {
  margin-top: 20px;
  color: grey;
  font-size: 14px;
}
/* ------------------------------------------------------- */

/* Footer styling: */

.footer {
  background-color: darkgrey;
  width: 100%;
  height: 50px;
  margin-top: 20px;
}

.footer-text {
  color: white;
  font-size: 14px;
  line-height: 50px;
  height: 30%;
  width: 600px;
  margin-left: 50px;
}

/* Old paragraphs styling (may be useful) */

/* .paragraphs {
  background-color: pink;
  margin-top: 30px;
  width: 100%;
  height: 350px;
  display: inline-block;
  text-align: justify;
}

.paragraph-element {
  width: 32%;
  height: 350px;
  background-color: yellow;
  display: inline-block;
}

.paragraphs:after {
  content: "";
  width: 100%;
  display: inline-block;
} */

.about-component {
  width: 90%;
  margin: auto;
  display: flex;
  flex-direction: column;
  color: grey;
}

.about-title {
  text-transform: uppercase;
  font-size: 25px;
}

.about-paragraph {
  width: 80%;
  height: 100px;
  margin-top: 20px;
  margin-left: auto;
  font-size: 13px;
}

.about-list {
  display: flex;
  width: 80%;
  margin-top: 20px;
  margin-left: auto;
  justify-content: space-between;
}

.about-list-element {
  width: 30%;
}

.about-list-img {
  height: 40%;
  width: 100%;
}

.about-list-name {
  text-transform: uppercase;
  display: inline-block;
  margin-top: 30px;
  font-size: 20px;
  padding-bottom: 10px;
}

.about-list-hr {
  width: 33%;
}

.about-list-title {
  text-transform: uppercase;
  display: inline-block;
  margin-top: 10px;
  font-size: 15px;
  padding-bottom: 15px;
}

.about-list-text {
  font-size: 13px;
}

